--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^9.6.0",
+    "browser-sync": "^2.27.10",
     "cssnano": "^4.1.10",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.2.0",
